Added titanium sword as item, and added experimental texture. Will likely change to match the provided titanium ingot texture, but for now will serve as a functional placeholder with the proper transparency.

--- a/src/main/resources/assets/titaniummod/lang/en_us.json
+++ b/src/main/resources/assets/titaniummod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.titaniummod.titanium_bar": "Titanium Ingot"
+  "item.titaniummod.titanium_bar": "Titanium Ingot",
+  "item.titaniummod.titanium_sword": "Titanium Sword"
 }
