Added in titanium ore block and texture. No explicit ore functionality such as needing the right tool or integration into world generation.

--- a/src/main/resources/assets/titaniummod/lang/en_us.json
+++ b/src/main/resources/assets/titaniummod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.titaniummod.titanium_bar": "Titanium Ingot",
-  "item.titaniummod.titanium_sword": "Titanium Sword"
+  "item.titaniummod.titanium_sword": "Titanium Sword",
+  "block.titaniummod.titanium_ore": "Titanium Ore"
 }
